extends Control

#REMINDER TO SELF: IF A LEVEL STARTS WITH A CUTSCENE, MAKE THE CUTSCENE
#THE PATH OF THE SCENE TRASITION
#SIMILAR TO HOW IN NORTUBEL, SOME PASSWORDS LEAD TO CUTSCENES BEFORE THE
#CHOSEN LEVELS START

func _ready() -> void:
	get_tree().paused = false

func _on_quit_button_pressed() -> void:
	SceneTransition.load_scene("res://Screens/main_menu.tscn")


func _on_button_for_level_1_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_2_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_3_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_4_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_5_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_6_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_7_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_8_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_9_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_10_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_11_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_12_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_13_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_14_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_15_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_16_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_17_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_18_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_19_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_20_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_21_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_22_pressed() -> void:
	pass # Replace with function body.


func _on_button_for_level_23_pressed() -> void:
	pass # Replace with function body.
